<resources>
    <string name="app_name">Portal</string>
    <string name="title_home">Portals</string>
    <string name="title_dashboard">Add</string>
    <string name="title_notifications">Settings</string>

    <string name="hello_a_fragment">Hello home fragment</string>
    <string name="hello_b_fragment">Hello add fragment</string>
    <string name="hello_c_fragment">Hello sett fragment</string>
    <string name="loc_by_user">location by %1$s</string>
    <string name="portal_card_title_sample">میدان آزادی</string>
    <string name="portal_card_sample_description">توضیحات میدان آزادی که می‌تون=اند بلند باشد .توضیحات میدان آزادی که می‌تون=اند بلند باشد توضیحات میدان آزادی که می‌تون=اند بلند باشد</string>
    <string name="portal_card_sample_address">تهران میدان آرژانتین خیابان الوند</string>
    <string name="add_image">افزودن تصویر</string>
    <string name="report">Report</string>
    <string name="locations">مکان‌ها</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="choose_location">Choose Location</string>
    <string name="images">تصاویر ارسالی:</string>
    <string name="send">ارسال</string>
</resources>
