<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ingress_black"
    android:scrollbars="vertical"
    tools:context=".view.fragments.AddPortalFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0000"
        android:orientation="vertical"
        android:padding="8dp">

        <EditText
            android:id="@+id/add_portal_title"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="title"
            android:maxLength="50"
            android:theme="@style/input" />

        <EditText
            android:id="@+id/add_portal_description"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="top"
            android:gravity="top"
            android:hint="description"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="2000"
            android:maxLines="4"
            android:theme="@style/input"
            android:scrollHorizontally="false" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/add_portal_location_button"
                style="@style/ingress_button_style_def"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/choose_location"
                app:layout_constraintBottom_toBottomOf="@id/lat_lon_layout"
                app:layout_constraintTop_toTopOf="@id/lat_lon_layout" />

            <LinearLayout
                android:id="@+id/lat_lon_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@id/add_portal_location_button"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:id="@+id/add_portal_location_text_lat"
                    style="@style/ingress_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0.0" />

                <TextView
                    android:id="@+id/add_portal_location_text_lon"
                    style="@style/ingress_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0.0" />
            </LinearLayout>

            <TextView
                android:id="@+id/add_portal_dumb1"
                style="@style/ingress_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Address:"
                app:layout_constraintTop_toBottomOf="@id/add_portal_location_button" />

            <TextView
                android:id="@+id/add_portal_address_text"
                style="@style/ingress_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="آدرس پورتال"
                android:textDirection="rtl"
                app:layout_constraintTop_toBottomOf="@id/add_portal_dumb1" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/images" />

        <LinearLayout
            android:id="@+id/add_portal_images_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/add_portal_image1"
                style="@style/imageviews2"
                android:src="@drawable/add" />

            <ImageView
                android:id="@+id/add_portal_image2"
                style="@style/imageviews2"
                android:src="@drawable/add" />

            <ImageView
                android:id="@+id/add_portal_image3"
                style="@style/imageviews2"
                android:src="@drawable/add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/ingress_button_style_def"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"

                android:layout_weight="1"
                android:text="@string/send" />

            <Button
                style="@style/ingress_button_style_def_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"

                android:layout_weight="1"
                android:text="Clear" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>